--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
   <meta charset="utf-8">
   <title> Kiranpal's Personal Site</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/me150x150.png" alt="My Profile Picture"></td>
-      <td><h1>Kiranpal Singh </h1>
+      <td><img class="myimage" src="images/me150x150.png" alt="My Profile Picture"></td>
+      <td><h1 class="myname">Kiranpal Singh </h1>
       <p><em>Student at <strong>LPU</strong> </em></p>
       <p>I am currently pursuing my ⛄ B.Tech from LPU, Phagwara and looking forward for my career in web development.</p></td>
     </tr>
@@ -26,7 +27,7 @@
   <hr>
   <h3>Studies</h3>
   <table cellspacing="10">
-    <thead>
+    <thead class="skillex" >
       <tr>
         <th>Year</th>
         <th>Education</th>
@@ -49,7 +50,7 @@
   <hr>
   <br>
   <table cellspacing="10">
-    <thead>
+    <thead class="skillex" >
       <th>Skills</th>
       <th>Experience</th>
       <th>Skills</th>
@@ -61,8 +62,8 @@
       <td>Trekking</td>
       <td>🌟</td>
       <tr>
-        <td>HTML</td>
-        <td>🌟🌟🌟🌟🌟</td>
+        <td class="skillexdata">HTML</td>
+        <td >🌟🌟🌟🌟🌟</td>
         <td>Photography</td>
         <td>🌟🌟</td>
       </tr>
